disks/pc/dos/ibm/3.30/README.md
---
layout: page
title: PC-DOS 3.30
permalink: /disks/pc/dos/ibm/3.30/
---

PC-DOS 3.30
---

PC-DOS 3.30 was announced and released on April 2, 1987, along with the first PS/2 models. 

Directory listings of the two 360Kb distribution diskettes are provided below.  This version of PC-DOS was also
available on one 720Kb diskette.

### Directory of PC-DOS 3.30 (Disk 1)

	 Volume in drive A has no label
	 Directory of  A:\
	
	IBMBIO   COM    22100   3-18-87  12:00p
	IBMDOS   COM    30159   3-17-87  12:00p
	COMMAND  COM    25307   3-17-87  12:00p
	ANSI     SYS     1678   3-17-87  12:00p
	COUNTRY  SYS    11285   3-17-87  12:00p
	DISPLAY  SYS    11290   3-17-87  12:00p
	DRIVER   SYS     1196   3-17-87  12:00p
	FASTOPEN EXE     3919   3-17-87  12:00p
	FDISK    COM    48216   3-18-87  12:00p
	FORMAT   COM    11616   3-18-87  12:00p
	KEYB     COM     9056   3-17-87  12:00p
	KEYBOARD SYS    19766   3-17-87  12:00p
	MODE     COM    15487   3-17-87  12:00p
	NLSFUNC  EXE     3060   3-17-87  12:00p
	PRINTER  SYS    13590   3-17-87  12:00p
	REPLACE  EXE    11775   3-17-87  12:00p
	SELECT   COM     4163   3-17-87  12:00p
	SYS      COM     4766   3-17-87  12:00p
	VDISK    SYS     3455   3-17-87  12:00p
	XCOPY    EXE    11247   3-17-87  12:00p
	EGA      CPI    49065   3-18-87  12:00p
	LCD      CPI    10752   3-17-87  12:00p
	4201     CPI    17089   3-18-87  12:00p
	5202     CPI      459   3-17-87  12:00p
	       22 File(s)      9216 bytes free

### Directory of PC-DOS 3.30 (Disk 2)

	 Volume in drive A has no label
	 Directory of  A:\
	
	APPEND   EXE     5825   3-17-87  12:00p
	ASSIGN   COM     1561   3-17-87  12:00p
	ATTRIB   EXE     9529   3-17-87  12:00p
	BACKUP   COM    31913   3-18-87  12:00p
	BASIC    COM     1063   3-17-87  12:00p
	BASICA   COM    36403   3-17-87  12:00p
	CHKDSK   COM     9850   3-18-87  12:00p
	COMMAND  COM    25307   3-17-87  12:00p
	COMP     COM     4214   3-17-87  12:00p
	DEBUG    COM    15897   3-17-87  12:00p
	DISKCOMP COM     5879   3-17-87  12:00p
	DISKCOPY COM     6295   3-17-87  12:00p
	EDLIN    COM     7526   3-17-87  12:00p
	FIND     EXE     6434   3-17-87  12:00p
	FORMAT   COM    11616   3-18-87  12:00p
	GRAFTABL COM     6128   3-17-87  12:00p
	GRAPHICS COM     3300   3-17-87  12:00p
	JOIN     EXE     8969   3-17-87  12:00p
	LABEL    COM     2377   3-17-87  12:00p
	MORE     COM      313   3-17-87  12:00p
	PRINT    COM     9026   3-17-87  12:00p
	RECOVER  COM     4299   3-18-87  12:00p
	REPLACE  EXE    11775   3-17-87  12:00p
	RESTORE  COM    34643   3-17-87  12:00p
	SHARE    EXE     8608   3-17-87  12:00p
	SORT     EXE     1977   3-17-87  12:00p
	SUBST    EXE     9909   3-17-87  12:00p
	TREE     COM     3571   3-17-87  12:00p
	XCOPY    EXE    11247   3-17-87  12:00p
	BASIC    PIF      369   3-17-87  12:00p
	BASICA   PIF      369   3-17-87  12:00p
	MORTGAGE BAS     6251   3-17-87  12:00p
	       32 File(s)     43008 bytes free
